--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -15,6 +15,7 @@ body,
 body {
   margin: 0;
   font-size: rem(16px);
+  color: #555;
 }
 
 h1 {
@@ -26,4 +27,25 @@ h1 {
   height: 100%;
   display: grid;
   grid-template-rows: max-content 1fr;
+}
+
+.container {
+  max-width: rem(1400px);
+  margin: 0 auto;
+  padding: 30px 20px;
+  width: 100%;
+}
+
+.hero {
+  background-image: url('/images/fashion_fusion_banner.webp');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: rem(544px);
+}
+
+.logo {
+  svg {
+    height: 24px;
+    width: 260px;
+  }
 }
