--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -25,6 +25,16 @@ h1 {
   color: #000;
 }
 
+img {
+  width: 100%;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .main-container {
   margin: 0;
   height: 100%;
@@ -37,22 +47,4 @@ h1 {
   margin: 0 auto;
   padding: 30px 20px;
   width: 100%;
-}
-
-.hero {
-  background-image: url('/images/fashion_fusion_banner.webp');
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: rem(480px);
-
-  @include max-size($large) {
-    height: auto;
-  }
-}
-
-.logo {
-  svg {
-    height: 24px;
-    width: 260px;
-  }
 }
