--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,7 @@
 @forward 'globals';
 @forward 'main';
+@forward 'buttons';
+@forward 'helper-classes';
+@forward 'animation';
+@forward 'error';
+@forward 'menu-burger';
