header icon comp

--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -22,6 +22,10 @@
     }
   }
 
+  .header-icon-list {
+    display: flex;
+  }
+
   .hero {
     background-image: url('/images/fashion_fusion_banner.webp');
     background-size: cover;
