--- a/src/scss/_error.scss
+++ b/src/scss/_error.scss
@@ -1,16 +1,7 @@
 @use './globals' as *;
 
-.error-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100dvh;
-  padding: 20px;
-}
-
 .error {
   display: flex;
-  flex-direction: column;
   gap: 24px;
   align-items: center;
   color: currentcolor;
@@ -32,5 +23,17 @@
       font-size: rem(14px);
       font-weight: normal;
     }
+  }
+}
+
+.error-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100dvh;
+  padding: 20px;
+
+  .error {
+    flex-direction: column;
   }
 }
