--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -29,7 +29,7 @@ $color-link: $color-blue-dark;
 $color-primary-btn: $color-blue-dark;
 $color-primary-btn-hover: $color-blue;
 $color-danger: $color-red;
-$color-border: $color-gray-20;
+$color-border: #a7a6ba;
 $color-background: $color-gray-10;
 $color-overlay: rgb($color-black, 0.6);
 
