--- a/src/components/authForm/_auth-form.scss
+++ b/src/components/authForm/_auth-form.scss
@@ -17,12 +17,6 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-
-  fieldset {
-    flex-grow: 1;
-  }
-
-  .form-footer {
-    justify-content: flex-end;
-  }
+  width: 100%;
+  max-width: 500px;
 }
