--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -69,6 +69,13 @@
     height: 100%;
   }
 
+  .hero-title {
+    font-size: rem(48px);
+    letter-spacing: 0;
+    margin-bottom: 0;
+    color: #000;
+  }
+
   .hero-text {
     max-width: rem(512px);
     font-size: rem(20px);
