--- a/src/components/authForm/_auth-form.scss
+++ b/src/components/authForm/_auth-form.scss
@@ -19,4 +19,14 @@
   flex-direction: column;
   width: 100%;
   max-width: 500px;
+
+  .form-footer {
+    margin: 0;
+  }
+
+  .auth-btn {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
