--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -14,11 +14,13 @@ $color-gray-40: #f9f9f9;
 $color-gray-50: #92aebb;
 $color-gray-60: #c086a6;
 
-// xx
-
+// New
 $color-gray-2: #fbfbf9;
 $color-gray-6: #a7a6ba;
 $color-gray-12: #66606d;
+$color-2: #2a3439;
+$color-6: #2f6d8f;
+$color-12: #f5f5f5;
 
 // $color-gray-40: #f9f9f9;
 
