--- a/src/components/selectBox/_select-box.scss
+++ b/src/components/selectBox/_select-box.scss
@@ -2,32 +2,8 @@
 
 /* stylelint-disable selector-class-pattern */
 .select-box {
-  input {
-    height: auto;
-    padding: 0;
-  }
-
   .select-box__control {
-    padding-left: 8px;
+    width: 300px;
     cursor: pointer;
-  }
-
-  .select-box__indicators {
-    align-self: auto;
-  }
-
-  .select-box__dropdown-indicator {
-    @include transition;
-  }
-
-  .select-box__control--menu-is-open {
-    .select-box__dropdown-indicator {
-      transform: rotate(180deg);
-    }
-  }
-
-  .select-box__value-container {
-    padding: 0;
-    align-self: auto;
   }
 }
