--- a/src/components/selectBox/_select-box.scss
+++ b/src/components/selectBox/_select-box.scss
@@ -5,5 +5,34 @@
   .select-box__control {
     width: 300px;
     cursor: pointer;
+    background-color: #f5f5f5;
+    border: 0;
+    min-height: 100px;
+    padding: 8px;
+  }
+
+  .select-box__indicator-separator {
+    display: none;
+  }
+
+  .select-box__indicator {
+    color: currentcolor;
+  }
+
+  .select-box__option {
+    background-color: #fff;
+  }
+
+  .select-box__option--is-focused {
+    background-color: #f7f7f7;
+  }
+
+  .select-box__control--is-focused {
+    box-shadow: 0 0 0 1px #2f6d8f;
+  }
+
+  .select-box__option--is-selected {
+    background-color: #2f6d8f;
+    color: #fff;
   }
 }
