--- a/src/components/formElements/radioButton/_radio-button.scss
+++ b/src/components/formElements/radioButton/_radio-button.scss
@@ -1,4 +1,3 @@
-/* stylelint-disable no-descending-specificity */
 @use '../../../scss/globals' as *;
 
 input[type='radio'] {
@@ -26,15 +25,30 @@ input[type='radio'] {
   }
 }
 
-.test2 {
-  width: 100%;
-}
-
-.test {
+.card {
   display: flex;
   flex-direction: row;
-  gap: 12px;
-  margin-bottom: 20px;
+  gap: 8px;
+
+  .checkbox-radio-container {
+    margin-bottom: 0;
+    width: 100%;
+    justify-content: center;
+
+    &:has(input:checked) {
+      color: white;
+    }
+
+    /* stylelint-disable-next-line no-descending-specificity */
+    &:focus-within {
+      outline: 0;
+    }
+
+    .form-label-container {
+      z-index: 1;
+      position: absolute;
+    }
+  }
 
   .radio-btn-container {
     display: flex;
@@ -44,7 +58,7 @@ input[type='radio'] {
   input[type='radio'] {
     background-color: #f4f4f5;
     width: 100%;
-    min-height: 60px;
+    min-height: rem(60px);
     border-radius: 2px;
     border: 0;
     padding: 0;
@@ -58,39 +72,5 @@ input[type='radio'] {
       background-color: #2f6d8f;
       border: 0;
     }
-  }
-
-  .checkbox-radio-container .form-label-container {
-    z-index: 1;
-    position: absolute;
-  }
-
-  .checkbox-radio-container:focus-within {
-    outline: 0;
-
-    input {
-      @include outline(rgba($color-blue, 70%));
-    }
-  }
-}
-
-.preferences {
-  fieldset {
-    width: 100%;
-  }
-
-  .checkbox-radio-container {
-    margin-bottom: 0;
-    width: 100%;
-    justify-content: center;
-  }
-
-  .checkbox-radio-container:has(input:checked) {
-    color: white;
-  }
-
-  legend {
-    margin-bottom: 4px;
-    position: static;
   }
 }
