--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -1,37 +1,40 @@
-table {
-  border-collapse: collapse;
+.table-container {
   width: 100%;
+  max-width: 800px;
+  height: 400px;
+  overflow: auto;
+  border: 1px solid #ccc;
+  position: relative;
 }
 
-td,
-th {
-  padding: 1rem;
+.fixed-table {
+  width: 100%;
+  border-collapse: collapse;
 }
 
-th {
-  background-color: #ddd;
+.fixed-table th,
+.fixed-table td {
+  padding: 8px;
+  border: 1px solid #ccc;
+  background: white;
+  white-space: nowrap;
 }
 
-tr {
-  &:nth-of-type(2n) {
-    background-color: #f5efef;
+.fixed-table thead th {
+  position: sticky;
+  top: 0;
+  background: #f4f4f4;
+  z-index: 2;
+
+  &:first-child {
+    z-index: 5;
   }
 }
 
-@media (width <=650px) {
-  th {
-    display: none;
-  }
-
-  td {
-    display: grid;
-    grid-template-columns: 12ch auto;
-    gap: 8px;
-  }
-
-  td::before {
-    content: attr(data-cell) ': ';
-    font-weight: bold;
-    text-transform: capitalize;
-  }
+.sticky-col {
+  position: sticky;
+  left: 0;
+  background: #fff;
+  z-index: 3;
+  box-shadow: 2px 0 3px rgb(0 0 0 / 10%);
 }
