--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -3,6 +3,31 @@
 * {
   box-sizing: border-box;
   font-family: $font-primary;
+
+  $color-background: $color-gray-40;
+  $color-foreground: #dbd9db;
+
+  @include min-size($small) {
+    ::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background-color: $color-background;
+      border-radius: 2px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background-color: $color-foreground;
+      border-radius: 4px;
+    }
+
+    @supports not selector(::-webkit-scrollbar) {
+      scrollbar-width: thin;
+      scrollbar-color: $color-foreground $color-background;
+    }
+  }
 }
 
 html,
