--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -18,7 +18,7 @@ $color-gray-60: #c086a6;
 $color-gray-2: #fbfbf9;
 $color-gray-6: #a7a6ba;
 $color-gray-12: #66606d;
-$color-2: #2a3439;
+$color-2: #2a3439; // x
 $color-6: #2f6d8f;
 $color-12: #f5f5f5;
 
