--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -42,7 +42,7 @@ a[class^='btn-'],
 }
 
 .btn-primary {
-  background-color: $color-primary-btn;
+  background-color: #473f4a;
 
   &:hover {
     background-color: $color-primary-btn-hover;
@@ -57,7 +57,8 @@ a[class^='btn-'],
 
 .btn-secondary {
   background-color: transparent;
-  color: $color-primary-btn;
+  color: #2a3439;
+  border: 1px solid #473f4a;
 
   &:hover {
     color: $color-green;
@@ -80,14 +81,12 @@ a[class^='btn-'],
 
 .btn-ghost {
   background-color: transparent;
-  color: $color-primary-btn;
+  color: #2a3439;
   border: 0;
   width: fit-content;
 
-  &.danger {
-    svg {
-      stroke: $color-danger;
-    }
+  svg {
+    stroke: currentcolor;
   }
 
   &:focus-visible {
