--- a/src/components/selectBox/_select-box.scss
+++ b/src/components/selectBox/_select-box.scss
@@ -27,6 +27,10 @@
     box-shadow: 0 0 0 1px #2f6d8f;
   }
 
+  .select-box__single-value {
+    color: #473f4a;
+  }
+
   .select-box__option--is-selected {
     background-color: #2f6d8f;
     color: #fff;
