--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -21,6 +21,7 @@ $color-gray-12: #66606d;
 $color-2: #2a3439; // x
 $color-6: #2f6d8f;
 $color-12: #f5f5f5;
+$color-16: #f4f4f5;
 
 // $color-gray-40: #f9f9f9;
 
