--- a/src/components/authForm/_auth-form.scss
+++ b/src/components/authForm/_auth-form.scss
@@ -25,8 +25,12 @@
   }
 
   .auth-btn {
-    width: 100%;
     display: flex;
     justify-content: flex-end;
+
+    .btn {
+      padding: 0;
+      margin-block: 12px 28px;
+    }
   }
 }
