--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -34,10 +34,11 @@ a[class^='btn-'],
   &::after {
     content: '';
     position: absolute;
-    top: -29%;
-    left: -18%;
+    top: -9%;
+    left: -2%;
     width: 104%;
-    height: 144%;
+    height: 124%;
+    min-width: 3rem;
     min-width: rem(48px);
     min-height: rem(48px);
   }
@@ -87,6 +88,7 @@ a[class^='btn-'],
   color: #2a3439;
   border: 0;
   width: fit-content;
+  min-height: auto;
 
   svg {
     stroke: currentcolor;
