--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -22,6 +22,7 @@
 .admin-nav {
   position: fixed;
   height: 100%;
+  background-color: #f4f4f5;
 
   .nav-list {
     flex-direction: column;
@@ -32,6 +33,7 @@
       text-transform: none;
       width: 100%;
       display: flex;
+      gap: 20px;
       padding: 20px;
 
       @include transition;
