--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -29,27 +29,35 @@
 }
 
 .admin-nav {
-  position: fixed;
-  height: 100%;
+  min-height: 100svh;
   background-color: #f4f4f5;
   width: rem(300px);
 
   @include transition($what: width, $time: 0.2s);
 
-  // @include max-size($medium) {
-  //   width: rem(61px);
-
-  //   .nav-text {
-  //     opacity: 0;
-  //   }
-  // }
-
   &.collapsed {
     width: rem(61px);
+
+    .btn-ghost {
+      svg {
+        transform: rotate(180deg);
+      }
+    }
 
     .nav-text {
       opacity: 0;
     }
+  }
+
+  .btn-ghost {
+    position: absolute;
+    background: #d9d6d6;
+    height: 60px;
+    padding: 2px;
+    top: 50%;
+    transform: translate(-50%);
+    right: -21px;
+    border: 0;
   }
 
   .nav-list {
