no fixed header for admin

--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -29,7 +29,7 @@
 }
 
 .admin-nav {
-  min-height: 100svh;
+  height: calc(100svh - $header-height);
   background-color: #f4f4f5;
   width: rem(300px);
 
