--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -1,19 +1,18 @@
-/* stylelint-disable selector-class-pattern */
 @use '../../scss/globals/' as *;
 
-.main-header {
+.main-header:not(.admin-page .main-header) {
   @include max-size($small) {
     width: 100%;
     position: fixed;
     top: 0;
     z-index: 8;
   }
+}
 
-  .main-header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+.main-header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
   .logo {
     svg {
