--- a/src/scss/globals/_variables.scss
+++ b/src/scss/globals/_variables.scss
@@ -5,6 +5,7 @@ $mini: rem(400px);
 $small: rem(767px);
 $medium: rem(1024px);
 $large: rem(1424px);
+$header-height: rem(74px);
 $color-blue: $color-blue;
 $color-background: $color-background;
 $box-shadow: rgb(99 99 99 / 20%) 0 2px 8px 0;
