moved main table

--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -25,6 +25,15 @@
   }
 }
 
+.user-role-cell {
+  display: flex;
+  align-items: center;
+
+  .role {
+    flex-grow: 1;
+  }
+}
+
 table {
   border-spacing: 0;
   width: 100%;
