--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -25,8 +25,9 @@ a[class^='btn-'],
   cursor: pointer;
   min-height: rem(60px);
 
-  @include max-size($medium) {
-    font-size: rem(16px);
+  &.danger {
+    background-color: $color-danger;
+    color: $color-white;
   }
 
   @include transition;
@@ -86,6 +87,11 @@ a[class^='btn-'],
   border: 0;
   width: fit-content;
   min-height: auto;
+
+  &.danger {
+    background-color: transparent;
+    color: $color-red-light;
+  }
 
   svg {
     stroke: currentcolor;
