--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -2,8 +2,7 @@
 
 .fixed-table {
   position: relative;
-  width: rem(300px);
-  min-width: 100%;
+  width: 100%;
   margin-bottom: 12px;
   border: 1px solid $color-border;
 
@@ -14,7 +13,7 @@
 }
 
 table {
-  border-spacing: 0;
+  border-collapse: collapse;
   width: 100%;
 
   tbody {
