--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -61,8 +61,17 @@ table {
     display: flex;
     justify-content: space-between;
 
+    .input-container {
+      width: auto;
+    }
+
     input {
       padding: 4px;
+    }
+
+    .edit-controls {
+      display: flex;
+      gap: 12px;
     }
   }
 
