--- a/src/scss/globals/_variables.scss
+++ b/src/scss/globals/_variables.scss
@@ -6,7 +6,11 @@ $small: rem(767px);
 $medium: rem(1024px);
 $large: rem(1424px);
 $header-height: rem(74px);
-$color-blue: $color-blue;
-$color-background: $color-background;
 $box-shadow: rgb(99 99 99 / 20%) 0 2px 8px 0;
 $box-shadow-inset: inset 0 -0.16rem 0 $color-blue;
+$padding-block-small: 4;
+$padding-block-medium: 12;
+$padding-block-large: 20;
+$padding-block-small-px: $padding-block-small + px;
+$padding-block-medium-px: $padding-block-medium + px;
+$padding-block-large-px: $padding-block-large + px;
