--- a/src/scss/variables.module.scss
+++ b/src/scss/variables.module.scss
@@ -6,6 +6,7 @@
   small: $small;
   medium: $medium;
   large: $large;
-  colorPrimary: $color-blue;
-  colorBackground: $color-background;
+  paddingBlockSmall: $padding-block-small;
+  paddingBlockMedium: $padding-block-medium;
+  paddingBlockLarge: $padding-block-large;
 }
