--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -41,6 +41,24 @@ table {
     }
   }
 
+  .empty-cell {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+
+    &::before {
+      content: '';
+      position: absolute;
+      display: flex;
+      background-color: currentcolor;
+      height: 28px;
+      width: 2px;
+      transform: rotate(45deg);
+      top: -3px;
+      right: 9px;
+    }
+  }
+
   .radio-btn-container {
     display: flex;
     gap: 4px;
