--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -23,6 +23,7 @@ a[class^='btn-'],
   border: 1px solid currentcolor;
   cursor: pointer;
   min-height: rem(60px);
+  letter-spacing: rem(0.5px);
 
   @include transition;
 
