--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -30,10 +30,7 @@ a[class^='btn-'],
   &::after {
     content: '';
     position: absolute;
-    top: -13%;
-    left: -35%;
-    width: 174%;
-    height: 128%;
+    inset: -10px;
   }
 }
 
