--- a/src/scss/globals/_variables.scss
+++ b/src/scss/globals/_variables.scss
@@ -14,3 +14,5 @@ $padding-block-large: 20;
 $padding-block-small-px: $padding-block-small + px;
 $padding-block-medium-px: $padding-block-medium + px;
 $padding-block-large-px: $padding-block-large + px;
+$page-width-small: rem(600px);
+$page-width-medium: rem(1000px);
