--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -34,6 +34,8 @@
   background-color: #f9f9f9;
   padding-left: 40px;
   padding-right: 40px;
+  display: flex;
+  justify-content: center;
 
   .top-container {
     display: flex;
