--- a/src/scss/_helper-classes.scss
+++ b/src/scss/_helper-classes.scss
@@ -72,6 +72,7 @@
   cursor: pointer;
   background-color: #f4f4f5;
   border: 0;
-  min-height: rem(76px);
-  border-radius: 2px;
+  min-height: rem(68px);
+  border-radius: 4px;
+  color: #2a3439;
 }
