--- a/src/components/formElements/form/_form.scss
+++ b/src/components/formElements/form/_form.scss
@@ -35,8 +35,13 @@ textarea {
   flex-direction: column;
   width: 100%;
   position: relative;
+  border-bottom: 3px solid transparent;
 
-  .form-label {
+  &:has(input:focus-visible) {
+    border-color: #2a3439;
+  }
+
+  .form-label-container {
     margin-bottom: 4px;
   }
 
@@ -47,18 +52,8 @@ textarea {
     width: 100%;
     position: relative;
     font-size: rem(14px);
-    outline: transparent;
-    font-family: $font-primary;
 
     @extend %styled-input;
-
-    &:focus-visible {
-      box-shadow: $box-shadow-inset;
-    }
-
-    &:disabled {
-      pointer-events: none;
-    }
   }
 
   .error-message {
@@ -79,12 +74,6 @@ textarea {
     }
   }
 }
-
-// .form-label-container {
-//   display: flex;
-//   gap: 12px;
-//   align-items: baseline;
-// }
 
 .error-icon {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -122,6 +111,7 @@ textarea {
     position: relative;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 
     @include transition($time: 0.22s);
 
@@ -136,6 +126,10 @@ textarea {
 
   .form-label-container {
     order: 2;
+  }
+
+  label {
+    cursor: pointer;
   }
 }
 
