small style changes

--- a/src/components/selectBox/_select-box.scss
+++ b/src/components/selectBox/_select-box.scss
@@ -24,7 +24,7 @@
   }
 
   .select-box__control--is-focused {
-    box-shadow: 0 0 0 1px #2f6d8f;
+    box-shadow: 0 0 0 0 transparent;
   }
 
   .select-box__single-value {
