--- a/src/components/formElements/form/_form.scss
+++ b/src/components/formElements/form/_form.scss
@@ -69,7 +69,7 @@ textarea {
     @include outline($color-danger);
 
     &:focus-visible {
-      box-shadow: inset 0 -0.16rem 0 $color-danger;
+      border-color: $color-danger;
       outline: transparent;
     }
   }
