--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable no-descending-specificity */
 @use '../../scss/globals' as *;
 
 .table-controls {
@@ -5,6 +6,148 @@
   justify-content: space-between;
   align-items: flex-end;
   margin-bottom: 8px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+
+  figure {
+    align-items: flex-start;
+
+    img {
+      max-width: rem(72px);
+    }
+  }
+
+  .edit-cell {
+    display: flex;
+    justify-content: space-between;
+
+    .input-container {
+      width: auto;
+    }
+
+    input {
+      padding: 4px;
+    }
+
+    .edit-controls {
+      display: flex;
+      gap: 12px;
+    }
+  }
+
+  .radio-btn-container {
+    display: flex;
+    gap: 4px;
+  }
+
+  th {
+    background-color: $color-white;
+    border-right: 1px solid $color-border;
+    border-bottom: 1px solid $color-border;
+    white-space: nowrap;
+    text-align: left;
+
+    &:last-child {
+      border-right: 0;
+    }
+  }
+
+  td {
+    line-height: rem(24px);
+    background-color: $color-white;
+  }
+
+  th,
+  td {
+    padding: 4px 12px;
+    word-wrap: break-word;
+  }
+
+  tr {
+    @include min-size($medium) {
+      display: table;
+      width: 100%;
+      table-layout: fixed;
+    }
+
+    &:nth-child(odd) {
+      td {
+        background-color: $color-background;
+
+        &.no-records-table-field {
+          background-color: $color-white;
+          border: none;
+          padding: 0;
+        }
+      }
+    }
+  }
+
+  tbody {
+    display: flex;
+    flex-direction: column;
+    max-height: rem(400px);
+    overflow: auto;
+
+    &.padding-4 {
+      td {
+        padding-block: $padding-block-small-px;
+      }
+    }
+
+    &.padding-12 {
+      td {
+        padding-block: $padding-block-medium-px;
+      }
+    }
+
+    &.padding-20 {
+      td {
+        padding-block: $padding-block-large-px;
+      }
+    }
+
+    @include max-size($medium) {
+      display: table-row-group;
+    }
+  }
+
+  .dropdown-container {
+    position: static;
+  }
+
+  .no-table-data {
+    padding: 4px 12px;
+  }
+
+  .btn-ghost {
+    padding: 0;
+  }
+
+  .table-header-cell {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .sort {
+    display: flex;
+    gap: 4px;
+  }
+
+  .dot {
+    width: rem(12px);
+    height: rem(12px);
+    border-radius: 50%;
+    background-color: $color-info;
+    display: flex;
+    position: absolute;
+    top: -2px;
+    right: -4px;
+    border: 3px solid $color-white;
+  }
 }
 
 .fixed-table {
@@ -19,158 +162,23 @@
   }
 
   table {
-    border-collapse: collapse;
-    width: 100%;
-
-    figure {
-      align-items: flex-start;
-
-      img {
-        max-width: rem(72px);
-      }
-    }
-
-    .edit-cell {
-      display: flex;
-      justify-content: space-between;
-
-      .input-container {
-        width: auto;
-      }
-
-      input {
-        padding: 4px;
-      }
-
-      .edit-controls {
-        display: flex;
-        gap: 12px;
-      }
-    }
-
-    .radio-btn-container {
-      display: flex;
-      gap: 4px;
-    }
-
     th {
-      background-color: $color-white;
-      border-right: 1px solid $color-border;
-      border-bottom: 1px solid $color-border;
       position: sticky;
       top: 0;
       z-index: 2;
-      white-space: nowrap;
-      text-align: left;
 
       &:first-child {
         z-index: 3;
       }
-
-      &:last-child {
-        border-right: 0;
-      }
     }
 
-    td {
-      line-height: rem(24px);
-      background-color: $color-white;
-    }
-
-    /* stylelint-disable-next-line no-descending-specificity */
     th,
     td {
-      padding: 4px 12px;
-      word-wrap: break-word;
-
       &:first-child {
         border-right: 1px solid $color-border;
         position: sticky;
         left: 0;
       }
-    }
-
-    tr {
-      @include min-size($medium) {
-        display: table;
-        width: 100%;
-        table-layout: fixed;
-      }
-
-      &:nth-child(odd) {
-        td {
-          background-color: $color-background;
-
-          &.no-records-table-field {
-            background-color: $color-white;
-            border: none;
-            padding: 0;
-          }
-        }
-      }
-    }
-
-    tbody {
-      display: flex;
-      flex-direction: column;
-      max-height: rem(400px);
-      overflow: auto;
-
-      &.padding-4 {
-        td {
-          padding-block: $padding-block-small-px;
-        }
-      }
-
-      &.padding-12 {
-        td {
-          padding-block: $padding-block-medium-px;
-        }
-      }
-
-      &.padding-20 {
-        td {
-          padding-block: $padding-block-large-px;
-        }
-      }
-
-      @include max-size($medium) {
-        display: table-row-group;
-      }
-    }
-
-    .dropdown-container {
-      position: static;
-    }
-
-    .no-table-data {
-      padding: 4px 12px;
-    }
-
-    .btn-ghost {
-      padding: 0;
-    }
-
-    .table-header-cell {
-      display: flex;
-      justify-content: space-between;
-    }
-
-    .sort {
-      display: flex;
-      gap: 4px;
-    }
-
-    .dot {
-      width: rem(12px);
-      height: rem(12px);
-      border-radius: 50%;
-      background-color: $color-info;
-      display: flex;
-      position: absolute;
-      top: -2px;
-      right: -4px;
-      border: 3px solid $color-white;
     }
   }
 }
@@ -178,7 +186,6 @@
 .table-search-input {
   position: relative;
 
-  /* stylelint-disable-next-line no-descending-specificity */
   .input-container {
     right: -8px;
     top: 32px;
