--- a/src/components/datePicker/_date-picker.scss
+++ b/src/components/datePicker/_date-picker.scss
@@ -12,13 +12,13 @@
   }
 
   .rdp-month {
-    border: 1px solid gray;
+    border: 1px solid #463f4a;
   }
 
   .rdp-today {
     button {
-      color: #fff;
-      background-color: lightgrey;
+      color: #f4f4f5;
+      background-color: #2f6d8f;
       border-radius: 4px;
     }
   }
@@ -27,7 +27,7 @@
     padding: 10px;
     font-size: 16px;
     font-weight: normal;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid #463f4a;
   }
 
   .rdp-weekday {
@@ -40,15 +40,15 @@
 
     &:focus-visible {
       outline: transparent;
-      background-color: $color-border;
-      color: #fff;
+      color: #f4f4f5;
+      background-color: #463f4a;
     }
   }
 
   .rdp-selected .rdp-day_button {
     border: 0;
-    background-color: $color-border;
-    color: #fff;
+    background-color: #463f4a;
+    color: #f4f4f5;
     font-weight: normal;
   }
 
