--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -55,6 +55,18 @@ h2 {
 h1 {
   font-size: rem(24px);
   font-family: $font-secondary;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &::after {
+    content: '';
+    display: flex;
+    margin-left: 8px;
+    border-bottom: 2px solid #262526;
+    border-radius: 4px;
+    width: 59px;
+  }
 }
 
 a {
