fixed repeatly styles

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,7 @@
 @forward 'main';
 @forward 'page';
 @forward 'buttons';
-@forward 'helper-classes';
+@forward 'helper_classes';
 @forward 'animation';
 @forward 'error';
 @forward 'menu-burger';
