--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -34,6 +34,12 @@ a[class^='btn-'],
   }
 }
 
+.text-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .btn-primary {
   background-color: #473f4a;
   color: #f4f4f5;
