--- a/src/scss/_helper_classes.scss
+++ b/src/scss/_helper_classes.scss
@@ -25,10 +25,12 @@
 }
 
 .page-small {
+  width: 100%;
   max-width: $page-width-small;
 }
 
 .page-medium {
+  width: 100%;
   max-width: $page-width-medium;
 }
 
