--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -48,8 +48,8 @@ h1,
 h2 {
   margin: 0;
   font-weight: normal;
-  letter-spacing: 3px;
-  margin-bottom: 12px;
+  letter-spacing: rem(3px);
+  margin-bottom: 24px;
 }
 
 h1 {
@@ -57,7 +57,6 @@ h1 {
   font-family: $font-secondary;
   display: flex;
   align-items: center;
-  justify-content: center;
 
   &::after {
     content: '';
