--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -19,15 +19,20 @@
     width: 100%;
     align-items: flex-end;
     margin-bottom: 16px;
+
+    h1 {
+      margin: 0;
+    }
   }
 
   .page-card {
     background: #fff;
-    padding: 12px;
     border-radius: 4px;
     box-shadow: $box-shadow;
     margin-bottom: 12px;
     width: 100%;
+    padding: 24px;
+    padding-top: 32px;
   }
 
   .user-page {
