table input style

--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -30,6 +30,9 @@ table {
 
     input {
       padding: 4px;
+      background-color: #fff;
+      border: 1px solid #a7a6ba;
+      min-height: rem(38px);
     }
 
     .edit-controls {
