--- a/src/components/tooltip/_tooltip.scss
+++ b/src/components/tooltip/_tooltip.scss
@@ -10,6 +10,7 @@
   position: absolute;
   z-index: 1;
   background: #fff;
+  color: #473f4a;
   padding: 8px;
   box-shadow: $box-shadow;
   border-radius: 4px;
