--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -7,6 +7,14 @@
   width: 100%;
 }
 
+.admin {
+  background-color: #f9f9f9;
+  padding-left: 40px;
+  padding-right: 40px;
+  display: flex;
+  justify-content: center;
+}
+
 .admin-container {
   .main {
     display: flex;
@@ -36,11 +44,6 @@
 
   .container {
     max-width: 100%;
-    background-color: #f9f9f9;
-    padding-left: 40px;
-    padding-right: 40px;
-    display: flex;
-    justify-content: center;
   }
 
   header {
