style current date

--- a/src/components/datePicker/_date-picker.scss
+++ b/src/components/datePicker/_date-picker.scss
@@ -17,8 +17,8 @@
 
   .rdp-today {
     button {
-      color: #f4f4f5;
-      background-color: #2f6d8f;
+      color: #463f4a;
+      border: 2px solid #463f4a;
       border-radius: 4px;
     }
   }
